tests/NormalTests/paczka1/small_fuzzy/86937112.err
Error in line 2: gn8UdSRdyu A647 46,5
Error in line 10: gn8UdSRdyu S872 47,2
